# BoxesAndLines

./: CMakeLists.txt  README.md  main.cpp
include/: connections.h  node.h
include/Nodes/: bitwise_operators.h  boolean_operators.h  test_node.h
